--- a/.github/workflows/python.yaml
+++ b/.github/workflows/python.yaml
@@ -13,7 +13,7 @@ jobs:
 
    steps:
     - name: Checkout git repository
-    - uses: actions/checkout@v4
+      uses: actions/checkout@v4
       
     - name: Setup Python environment
       uses: actions/setup-python@v5
