--- a/.github/workflows/terraform.yaml
+++ b/.github/workflows/terraform.yaml
@@ -17,7 +17,7 @@ jobs:
       - name: Terraform validate
         uses: dflook/terraform-validate@v1
         with:
-          path: dev/src/terraform/
+          path: [dev/src/terraform/, prod/src/terraform/]
 
   fmt-check:
     runs-on: ubuntu-latest
@@ -29,4 +29,4 @@ jobs:
       - name: terraform fmt
         uses: dflook/terraform-fmt-check@v1
         with:
-          path: dev/src/terraform/
+          path: [dev/src/terraform/, prod/src/terraform/]
