--- a/.github/workflows/python.yaml
+++ b/.github/workflows/python.yaml
@@ -2,7 +2,7 @@ name: Test
 
 on:
   push:
-    branches: ["**"]
+    branches-ignore: [master, develop]
   pull_request:
     branches: [master, develop]
 
