--- a/.github/workflows/python.yaml
+++ b/.github/workflows/python.yaml
@@ -27,7 +27,7 @@ jobs:
 
     - name: Run tests
       run: |
-        coverage run -m pytest dev/tests prod/tests
+        coverage run -m pytest tests
 
   run-linters:
     name: Run linters
