--- a/.github/workflows/terraform.yaml
+++ b/.github/workflows/terraform.yaml
@@ -10,9 +10,6 @@ jobs:
   validate:
     name: Validate terraform configuration
     runs-on: ubuntu-latest
-    strategy:
-      matrix:
-        path: [dev/src/terraform, prod/src/terraform]
     steps:
       - name: Checkout
         uses: actions/checkout@v4
@@ -20,14 +17,11 @@ jobs:
       - name: Terraform validate
         uses: dflook/terraform-validate@v1
         with:
-          path: ${{ matrix.path }}
+          path: src/terraform
 
   fmt-check:
     name: Check formatting of terraform files
     runs-on: ubuntu-latest
-    strategy:
-      matrix:
-        path: [dev/src/terraform, prod/src/terraform]
     steps:
       - name: Checkout
         uses: actions/checkout@v4
@@ -35,4 +29,4 @@ jobs:
       - name: terraform fmt
         uses: dflook/terraform-fmt-check@v1
         with:
-          path: ${{ matrix.path }}
+          path: src/terraform
