--- a/requirements.txt
+++ b/requirements.txt
@@ -21,6 +21,7 @@ apache-airflow-providers-sqlite==3.8.1
 apispec==6.6.1
 argcomplete==3.4.0
 asgiref==3.8.1
+asttokens==2.4.1
 attrs==23.2.0
 Babel==2.15.0
 backoff==2.2.1
@@ -41,6 +42,7 @@ click-repl==0.3.0
 clickclick==20.10.2
 colorama==0.4.6
 colorlog==4.8.0
+comm==0.2.2
 ConfigUpdater==3.2
 connexion==2.14.2
 coverage==7.6.0
@@ -48,6 +50,7 @@ cron-descriptor==1.4.3
 croniter==3.0.3
 cryptography==41.0.7
 db-dtypes==1.2.0
+debugpy==1.8.3
 decorator==5.1.1
 Deprecated==1.2.14
 dill==0.3.8
@@ -55,6 +58,7 @@ dnspython==2.6.1
 docstring_parser==0.16
 docutils==0.21.2
 email_validator==2.2.0
+executing==2.0.1
 flake8==7.1.0
 Flask==2.2.5
 Flask-AppBuilder==4.5.0
@@ -142,12 +146,17 @@ importlib_metadata==8.0.0
 importlib_resources==6.4.0
 inflection==0.5.1
 iniconfig==2.0.0
+ipykernel==6.29.5
+ipython==8.26.0
 itsdangerous==2.2.0
+jedi==0.19.1
 Jinja2==3.1.4
 jmespath==1.0.1
 json-merge-patch==0.2
 jsonschema==4.23.0
 jsonschema-specifications==2023.12.1
+jupyter_client==8.6.2
+jupyter_core==5.7.2
 kombu==5.3.7
 lazy-object-proxy==1.10.0
 limits==3.13.0
@@ -160,12 +169,14 @@ MarkupSafe==2.1.5
 marshmallow==3.21.3
 marshmallow-oneofschema==3.1.1
 marshmallow-sqlalchemy==0.28.2
+matplotlib-inline==0.1.7
 mccabe==0.7.0
 mdit-py-plugins==0.4.1
 mdurl==0.1.2
 methodtools==0.4.7
 more-itertools==10.3.0
 multidict==6.0.5
+nest-asyncio==1.6.0
 numpy==1.26.4
 oauthlib==3.2.2
 opentelemetry-api==1.26.0
@@ -180,8 +191,10 @@ ordered-set==4.1.0
 packaging==24.1
 pandas==2.1.4
 pandas-gbq==0.23.1
+parso==0.8.4
 pathspec==0.12.1
 pendulum==3.0.0
+platformdirs==4.2.2
 pluggy==1.5.0
 prison==0.2.1
 prometheus_client==0.20.0
@@ -191,6 +204,7 @@ protobuf==4.25.0
 psutil==6.0.0
 psycopg2==2.9.9
 psycopg2-binary==2.9.9
+pure_eval==0.2.3
 pyarrow==17.0.0
 pyasn1==0.5.1
 pyasn1-modules==0.3.0
@@ -210,7 +224,9 @@ python-dateutil==2.9.0.post0
 python-nvd3==0.16.0
 python-slugify==8.0.4
 pytz==2024.1
+pywin32==306
 PyYAML==6.0.1
+pyzmq==26.0.3
 redis==5.0.8
 referencing==0.35.1
 requests==2.32.3
@@ -232,12 +248,14 @@ SQLAlchemy-JSONField==1.0.2
 sqlalchemy-spanner==1.7.0
 SQLAlchemy-Utils==0.41.2
 sqlparse==0.5.1
+stack-data==0.6.3
 tabulate==0.9.0
 tenacity==9.0.0
 termcolor==2.4.0
 text-unidecode==1.3
 time-machine==2.14.2
 tornado==6.4.1
+traitlets==5.14.3
 typing_extensions==4.12.2
 tzdata==2024.1
 uc-micro-py==1.0.3
