--- a/requirements.txt
+++ b/requirements.txt
@@ -224,7 +224,7 @@ python-dateutil==2.9.0.post0
 python-nvd3==0.16.0
 python-slugify==8.0.4
 pytz==2023.4
-pywin32==306
+pywin32==305
 PyYAML==6.0.1
 pyzmq==26.0.3
 redis==5.0.8
@@ -232,7 +232,7 @@ referencing==0.35.1
 requests==2.32.3
 requests-oauthlib==2.0.0
 requests-toolbelt==1.0.0
-rfc3339-validator==0.1.4
+rfc3339-validator==0.1.4gi
 rich==13.7.1
 rich-argparse==1.5.2
 rpds-py==0.19.1
