Fix: reversed linter executor

--- a/.github/workflows/python.yaml
+++ b/.github/workflows/python.yaml
@@ -48,4 +48,6 @@ jobs:
           pip install flake8
 
       - name: Run linters
-        uses: py-actions/flake8@v2
+        uses: wearerequired/lint-action@v2
+        with:
+          flake8: true
